--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,23 +1,16 @@
 body{
-    height: 100vh;
-}
-
-.overlay-img{
-    background-color: rgba(0, 0, 0, 0.437);
-    opacity: 0.9;
+    background-image: url(../resources/bg.jpg);
     background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-position: center;
-    height: 100vh;
-    width: 100%;
-}
-
-.bg-image{
-    background-image: url('../resources/bg.jpg');
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
-    width: 100%;
-    opacity: 0.6;
+    background-color: #000;
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    margin: 0;
+    padding: 0;
 }
 
 
