--- a/styles/header.css
+++ b/styles/header.css
@@ -1,12 +1,18 @@
-i {
-    font-size: 25px;
-    border: 1px solid white;
-    padding: 20px;
-    border-radius: 50%;
-   
-  }
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600");
 
-  .fa{
-    color: white
+svg{
+    width: 50px;
+    height: 50px;
+    border: #fff solid 2px;
+    border-radius: 50%;
+    padding: 20px;
+}
+
+
+.logo{
+   display: flex;
+   justify-content: center;
+   text-align: center;
+   margin-top: 100px;
   }
 
