added text decoraction

--- a/styles/body.css
+++ b/styles/body.css
@@ -31,7 +31,8 @@ hr{
 }
 
 span{
-    color: red;
+    color: rgb(255, 255, 255);
+    text-decoration:underline;
     text-decoration-style: dotted;
 }
 
