--- a/styles/body.css
+++ b/styles/body.css
@@ -4,21 +4,20 @@
     background-color: rgb(255, 255, 255);
     height: 40px;
     width: 1px;
-    
 }
 
 .bodyContent{
     text-align: center;
 }
 
-h1{
+.bodyContent h1{
     margin-top: 60px;
     font-size: 48px;
     margin-bottom: 40px;
     letter-spacing: 4px;
 }
 
-p{
+.bodyContent p{
     margin-bottom: 60px;
     letter-spacing: 2.5px;
     font-weight: 200;
@@ -36,10 +35,18 @@ span{
     text-decoration-style: dotted;
 }
 
+span:hover{
+    color: rgb(119, 198, 225);
+}
+
 .horizontal-line-1{
     margin-top: 0;
 }
 
 .horizontal-line-2{
     margin-bottom: 0;
+}
+
+@media (max-width: 480px){
+
 }
