--- a/styles/tabai.css
+++ b/styles/tabai.css
@@ -1,7 +1,7 @@
 button{
     background-color: transparent;
     border: 1px solid white;
-    color: white;
+    color: rgb(255, 0, 0);
     min-width: 7.5rem;
     height: 2.75rem;
     line-height: 2.75rem;
@@ -84,9 +84,6 @@ iframe{
   }
 
   
- 
-
-
   @media (max-width: 480px){
     #buttonai{
         display: flex;
